src/test/ui/issues/issue-36379.stderr
error: compilation successful
  --> $DIR/issue-36379.rs:16:1
   |
LL | fn main() { } //~ ERROR compilation successful
   | ^^^^^^^^^^^^^

error: aborting due to previous error

