src/test/ui/issues/issue-36379.rs
// compile-pass
// skip-codegen

fn _test() -> impl Default { }


fn main() { }
